@@ -133,7 +133,7 @@ RCS_ID("$Id$")
 };
 
 //-----------------------------------------------------------------------------------
--(NSString*)label
+-(NSString *)label
 {
   NSString* _label=nil;
 
